# adventofcode_2025

./: Cargo.toml  README.md
aoc_runner/: Cargo.toml
aoc_runner/src/: lib.rs
aoc_runner_macro/: Cargo.toml
aoc_runner_macro/src/: lib.rs
d01/: Cargo.toml
d01/src/: rotation.rs
d02/: Cargo.toml
d02/src/: lib.rs  main.rs
d03/: Cargo.toml
d03/src/: battery.rs  battery_bank.rs  lib.rs  main.rs
d04/: Cargo.toml
d04/src/: lib.rs  position.rs  roll.rs  room.rs
d05/: Cargo.toml
d05/src/: lib.rs  main.rs  range.rs
d06/: Cargo.toml
d06/src/: main.rs
d07/: Cargo.toml
d07/src/: lib.rs  main.rs
d08/: Cargo.toml
d08/src/: circuits.rs  junction_box.rs  lib.rs  main.rs
d09/: Cargo.toml
d09/src/: main.rs
src/: main.rs
