[[bin]]
name = "d02p1"
path = "src/bin/p1.rs"

[[bin]]
name = "d02p2"
path = "src/bin/p2.rs"

[package]
name = "d02"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
test-log = {version = "0.2", features = ["trace"]}
aoc_runner = { path = "../aoc_runner" }
