[[bin]]
name = "d03p1"
path = "src/bin/p1.rs"

[[bin]]
name = "d03p2"
path = "src/bin/p2.rs"

[package]
name = "d03"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc_runner = { path = "../aoc_runner" }
eyre = "0.6"
tracing = "0.1.43"
itertools = "0.14"

[dev-dependencies]
test-log = {version = "0.2", features = ["trace"]}
