[package]
name = "d07"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d07p1"
path = "src/bin/p1.rs"

[[bin]]
name = "d07p2"
path = "src/bin/p2.rs"


[dependencies]
aoc_runner = { path = "../aoc_runner" }
eyre = "0.6"
tracing = "0.1.43"
itertools = "0.14"

[dev-dependencies]
test-log = {version = "0.2", features = ["trace"]}
